rename file of web

--- a/web/index.html
+++ b/web/index.html
@@ -23,19 +23,20 @@
   <div class="chart"><canvas id="myChart"></canvas></div>
 
   <div class="normal">
-    BPM: <span id="bpm"> </span>
+    <span> Beat:</span> <span id="bpm"> </span><span> BPM</span></span>
     <!-- <br> -->
-    SpO2: <span id="oxy"> </span>%
+    <span>SpO2:</span> <span id="oxy"> </span>%
   </div>
   <div class="ave">
-    Average BPM: <span id="avebpm"> </span>
+    <span>Average Beat:</span> <span id="avebpm"> </span><span id="kiHieu"> BPM</span>
     <!-- <br> -->
-    Average SpO2: <span id="aveoxy"> </span>% <br>
+    <span>Average SpO2:</span> <span id="aveoxy"> </span>% <br>
   </div>
 
-  <button id="saveButton">Save</button>
-  <button id="clearButton">Clear</button>
-  <button id="historyButton" Push>History</button>
+  <div id="center">
+    <button id="saveButton">Save</button>
+    <button id="clearButton">Clear</button>
+    <button id="historyButton" Push>History</button>
   </div>
   <div id="popupContainer" class="popup-container">
     <div id="popup" class="popup">
